Enable Quidem tests in JDK 9+